--- a/frontend/src/css/Contact.css
+++ b/frontend/src/css/Contact.css
@@ -1,65 +1,70 @@
-* {
- margin: 0%;
- padding: 0%;
- box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
-}
 .contactUs-container {
- width: 100%;
- display: flex;
- flex-direction: column;
- align-items: center;
- margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contactUs-content-container {
- width: 90%;
- display: flex;
- align-items: center;
- justify-content: center;
- gap: 80px;
- margin-top: 15px;
- margin-bottom: 150px;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .contactUs-img-container {
- width: 40%;
+  width: 40%;
 }
 
 .contactUs-img-container img {
- width: 100%;
- height: 380px;
+  width: 100%;
+  height: 380px;
 }
 
-.contactUs-content-container h4{
- padding-top: 10px;
+.contactUs-content-container h4 {
+  padding-top: 10px;
 }
+
 .contactUs-content-container p {
- padding-top: 10px;
+  padding-top: 10px;
+  font-size: 13px;
 }
-#para{
- padding: 15px 0px;
+
+#para {
+  padding: 15px 0px;
 }
-#Explore{
- width: 35%;
- padding: 10px 5px;
- border: 1px solid gray;
+
+#Explore {
+  width: 35%;
+  padding: 10px 5px;
+  border: 1px solid gray;
 }
+
 @media screen and (max-width:767px) {
- .contactUs-content-container {
-   width: 95%;
-   gap: 30px;
+  .contactUs-content-container {
+    width: 95%;
+    gap: 30px;
   }
 }
+
 @media screen and (max-width:576px) {
- .contactUs-content-container {
-  width: 70%;
-   flex-direction: column;
- }
-  .contactUs-img-container {
-   width: 70%;
+  .contactUs-content-container {
+    width: 70%;
+    flex-direction: column;
   }
-        #Explore {
-         width: 45%;
-        }
+
+  .contactUs-img-container {
+    width: 70%;
+  }
+
+  .contactUs-img-container img {
+    height: 200px;
+  }
+
+  #Explore {
+    width: 45%;
+  }
 }
