--- a/frontend/src/css/Doctor.css
+++ b/frontend/src/css/Doctor.css
@@ -1,10 +1,3 @@
-* {
- margin: 0%;
- padding: 0%;
- box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
-}
-
 .doctors-parent-container {
  width: 100%;
  display: flex;
@@ -15,7 +8,7 @@
 
 .doctors-content-container {
  width: 90%;
- margin-top: 20px;
+ margin-top: 100px;
  margin-bottom: 60px;
 }
 
@@ -65,7 +58,6 @@
 }
 
 .card-img {
- height: 205px;
  border-radius: 10px;
  background-color: #e2e5ff;
 }
@@ -77,14 +69,43 @@
 .card-content {
  padding: 10px;
 }
-
+.card-content p{
+  font-size: 14px;
+  line-height: 20px;
+}
 #green {
  color: #33a229;
 }
 
+/* ////pagination */
+.pagination{
+  width: 100%;
+ margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+   align-items: center;
+}
+#pre, #next{
+  display: flex;
+  align-items: center;
+}
+.pagination button {
+ margin: 0px 5px;
+ padding: 5px 10px;
+}
+
+.pagination button.active {
+ font-weight: bold;
+ border-radius: 5px;
+}
+
+.pagination button:disabled {
+ opacity: 0.9;
+}
+
 @media screen and (max-width:991px) {
  .doctors-cards-conatiner {
-  margin-left: 30px;
+  margin-left: 20px;
  }
 
  .doctor-card {
@@ -104,12 +125,16 @@
  }
 
  .doctor-card {
-  width: 45%;
+  width: 40%;
   margin-left: 10px;
  }
 }
 
 @media screen and (max-width:600px) {
+
+  .doctors-content-container  h4{
+    margin-left: 30px;
+  }
  .doctors-content {
   display: flex;
   flex-direction: column;
@@ -133,12 +158,6 @@
  }
 
  .doctor-card {
-  width: 90%;
- }
-.card-img {
-height: 150px;
-}
- .card-img img{
-width:65%;
+  width: 46%;
  }
 }
