--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -1,15 +1,11 @@
-*{
- margin: 0%;
- padding: 0%;
- box-sizing: border-box;
-}
 .footer-parent {
   width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
- font-family: Arial, Helvetica, sans-serif;
+ border-top: 1px solid grey;
+ background-color: #d9ecf6;
 }
 
 .App-parent-container {
@@ -28,7 +24,7 @@
 }
 
 .footer-logo img {
- width: 26%;
+ width: 22%;
 }
 .content-container {
  width: 40%;
@@ -36,6 +32,8 @@
 }
 .content-container p{
  margin-top: 15px;
+ font-size: 14px;
+ line-height: 18px;
 }
 .container-logo {
  display: flex;
@@ -45,8 +43,9 @@
 }
 
 .container-logo img {
- height: 50px;
+ height: 35px;
 }
+
 
 .personal-info {
  width: 50%;
@@ -61,6 +60,7 @@
 
 .personal-info li {
  padding-top: 1rem;
+ font-size: 14px;
 }
 
 .personal-info h3 {
@@ -74,17 +74,23 @@
  margin: 1rem 0rem;
 
 }
-
+.your-info p{
+  font-size:14px;
+}
 .footer {
  width: 100%;
  margin-top: 2rem ;
 }
+
 .footer p{
-  margin-left: 6rem;
-  padding-bottom: 10px;
+  /* margin-left: 5px; */
+  text-align: center;
+  padding-bottom: 8px;
+  font-size: 14px;
 }
+
 hr {
- margin-bottom: 0.6rem;
+ margin-bottom: 0.3rem;
 }
 
 @media screen and (max-width:991px) {
@@ -92,15 +98,17 @@ hr {
 .App-parent-container {
   width: 90%;
   column-gap: 5rem;
+ 
  }
-
-
+ .footer-logo img {
+   width: 25%;
+ }
  .personal-info {
-  width: 50%;
+  width: 50%; 
  }
-
  .footer{
   width: 90%;
+
  }
 
 }
@@ -113,16 +121,18 @@ hr {
  }
 
  .content-container {
-  width: 100%;
+  width: 95%;
  }
 
  .container-logo {
   margin-top: 1rem;
   column-gap: 1rem;
  }
-
+.footer-logo img {
+  width: 15%;
+}
  .container-logo img {
-  height: 45px;
+  height: 40px;
  }
 
  .personal-info {
@@ -141,12 +151,14 @@ hr {
  }
 
  .footer {
-  width: 95%;
   margin-top: 1rem;
  }
 }
 
 @media screen and (max-width:576px) {
+  .footer-logo img {
+      width: 20%;
+    }
  .container-logo img {
   height: 40px;
  }
@@ -170,6 +182,9 @@ hr {
  }
 }
 @media screen and (max-width:390px) {
+  .footer-logo img {
+      width: 25%;
+    }
   .personal-info {
     width: 100%;
     display: flex;
