--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -1,100 +1,217 @@
-* {
- padding: 0%;
- margin: 0%;
- box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
- cursor: pointer;
-}
+ .header-container {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  padding: 5px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(264deg, rgba(101, 191, 155, 1) 5%, rgba(101, 192, 154, 1) 9%, rgba(101, 190, 156, 1) 14%, rgba(100, 196, 151, 1) 31%, rgba(100, 196, 151, 1) 31%, rgba(99, 205, 142, 1) 41%, rgba(101, 191, 155, 1) 71%, rgba(104, 171, 174, 1) 81%, rgba(102, 181, 165, 1) 94%, rgba(101, 191, 155, 1) 100%, rgba(101, 191, 155, 1) 100%, rgba(106, 154, 190, 1) 100%, rgba(109, 135, 207, 1) 100%);
+ }
 
-.header-container {
- width: 100%;
- padding: 5px 15px;
- display: flex;
- justify-content: space-between;
- align-items: center;
- background: rgb(101, 191, 155);
- background: linear-gradient(264deg, rgba(101, 191, 155, 1) 5%, rgba(101, 192, 154, 1) 9%, rgba(101, 190, 156, 1) 14%, rgba(100, 196, 151, 1) 31%, rgba(100, 196, 151, 1) 31%, rgba(99, 205, 142, 1) 41%, rgba(101, 191, 155, 1) 71%, rgba(104, 171, 174, 1) 81%, rgba(102, 181, 165, 1) 94%, rgba(101, 191, 155, 1) 100%, rgba(101, 191, 155, 1) 100%, rgba(106, 154, 190, 1) 100%, rgba(109, 135, 207, 1) 100%);
-}
+ .header-logo {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  color: #523c5f;
+ }
 
-.header-logo {
- width: 20%;
- display: flex;
- align-items: center;
- column-gap: 10px;
- color: #523c5f;
-}
+ .header-logo img {
+  width: 18%;
+  margin-bottom: 5px;
+ }
 
-.header-logo img {
- width: 26%;
-}
+ .header-list ul {
+  display: flex;
+  gap: 30px;
+  list-style: none;
+  color: #523c5f;
+  transition: left 0.3s ease;
+ }
 
-.header-list ul {
- display: flex;
- gap: 30px;
- list-style: none;
- color: #523c5f;
-}
+ .link {
+  text-decoration: none;
+  color: inherit;
+ }
 
-.link {
- text-decoration: none;
- color: inherit;
-}
+ .header-list ul li {
+  position: relative;
+ }
 
-.header-list ul li:hover {
- padding-bottom: 2px;
- border-bottom: 2px solid #523c5f;
-}
+ .header-list ul li:hover::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #55455f;
+ }
 
-.header-container button {
- padding: 10px 20px;
- border-radius: 200px;
- background-color: #5b9d9a;
- border: none;
- outline: none;
- color: #523c5f;
- font-weight: 600;
-}
-.profile{
- display: flex;
- align-items: center;
- gap: 5px;
-}
-.profile h4{
- color: #523c5f;
-}
-#profile-pic {
- border-radius: 50%;
- height: 35px;
-}
 
-.dropdown {
- position: relative;
- display: inline-block;
-}
+ .header-container button {
+  padding: 10px 20px;
+  border-radius: 200px;
+  background-color: #5b9d9a;
+  border: none;
+  outline: none;
+  color: #523c5f;
+  font-weight: 600;
+ }
 
-.dropdown-content {
- display: none;
- position: absolute;
- right: 0px;
- background-color: #f1f1f1;
- min-width: 160px;
-}
+ .profile {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+ }
 
-.dropdown-content li {
- color: black;
- padding: 12px 16px;
- text-decoration: none;
- display: block;
-}
+ .profile h4 {
+  color: #523c5f;
+ }
 
-.dropdown:hover .dropdown-content {
- display: block;
-}
+ #profile-pic {
+  border-radius: 50%;
+  height: 35px;
+ }
 
-.dropdown-content li:hover {
- background-color: #ddd;
-}
+ .dropdown {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+ }
 
-#dropdown {
- padding: 0px 0px 10px 10px;
+ .dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+ }
+
+ .dropdown-content ul {
+  list-style: none;
+ }
+
+ .dropdown-content li {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+ }
+
+ .dropdown:hover .dropdown-content {
+  display: block;
+ }
+
+ .dropdown-content li:hover {
+  background-color: #ddd;
+ }
+
+ #dropdown {
+  padding: 0px 0px 10px 10px;
+ }
+
+ /* //for hambarger */
+ #checkbtn {
+  position: absolute;
+  right: 0;
+  top: 10px;
+  margin-right: 10px;
+  font-size: 1.8rem;
+  color: #523c5f;
+  display: none;
+ }
+
+ #check {
+  display: none;
+ }
+
+ #check:checked~.header-list ul {
+  left: 0;
+ }
+
+ @media screen and (max-width:800px) {
+
+  .header-logo img {
+   width: 20%;
+  }
+
+  .header-container button {
+   margin-right: 40px;
+  }
+
+  #checkbtn {
+   display: block;
+  }
+
+  .header-list ul {
+   width: 98%;
+   flex-direction: column;
+   padding: 30px 0px;
+   background-color: rgba(101, 191, 155, 0.9);
+   position: fixed;
+   top: 55px;
+   left: -100%;
+   z-index: 1;
+  }
+
+  .header-list ul li {
+   text-align: center;
+  }
+ }
+
+ @media screen and (max-width:610px) {
+  .header-logo {
+   width: 60%;
+  }
+
+  .header-logo img {
+   width: 20%;
+  }
+
+  .header-list ul {
+   width: 100%;
+   top: 75px;
+   font-weight: 600;
+  }
+
+  #checkbtn {
+   top: 20px;
+  }
+ }
+
+ @media screen and (max-width:450px) {
+  .header-container {
+   padding: 5px 5px;
+  }
+
+  .header-logo {
+   column-gap: 0px;
+  }
+
+  .header-logo img {
+   width: 18%;
+  }
+
+  .header-logo h2 {
+   font-size: 1.2rem;
+  }
+
+  .header-list ul {
+   top: 50px;
+  }
+.header-container button{
+  padding: 8px 10px;
+  margin-right: 24px;
 }
+  .profile {
+   margin-right: 15px;
+   padding: 8px 12px;
+  }
+
+  #checkbtn {
+   top: 15px;
+   margin-right: 5px;
+   font-size: 1.3rem;
+  }
+ }
